gccida/c0/simplify_replace_rtx
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_replace_rtx/src/simplify-rtx.c:722:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode outermode; // [rsp+Ch] [rbp-C4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_replace_rtx/src/simplify-rtx.c:724:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // [rsp+28h] [rbp-A8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_replace_rtx/src/simplify-rtx.c:725:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v13; // [rsp+34h] [rbp-9Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_replace_rtx/src/simplify-rtx.c:731:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op_mode_1; // [rsp+7Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_replace_rtx/src/simplify-rtx.c:734:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op_mode_0; // [rsp+94h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_replace_rtx/src/simplify-rtx.c:735:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op_mode; // [rsp+A4h] [rbp-2Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_replace_rtx/src/simplify-rtx.c:736:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+A8h] [rbp-28h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_replace_rtx/src/simplify-rtx.c:737:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+ACh] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_replace_rtx/src/simplify-rtx.c:763:21: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
rtwint = ( _DWORD *)x[1]; 
                    ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_replace_rtx/src/simplify-rtx.c:798:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_replace_rtx/src/simplify-rtx.c:798:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
                 ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_replace_rtx/src/obj/simplify-rtx.o] Error 1
